# DW_Test

./: CONTRIBUTING.md  README.md  RUNBOOK.md  extract.js  pyproject.toml
pharma_datalake_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/bronze/: ingest_bronze.py
src/gold/: aggregate_gold.py  gold_dependencies.py  gold_dimensions.py
src/gold/metrics/: call_metrics.py  hcp_engagement.py  rep_productivity.py  rx_metrics.py  territory_metrics.py
src/gold/source_aligned/: gold_call_enriched.py  gold_iqvia_enriched.py  gold_rx_enriched.py
src/silver/: upsert_silver.py  upsert_silver_fact.py  upsert_silver_scd1.py  upsert_silver_scd2.py
src/utils/: config.py  tables.json  transforms.py
tests/: test_pipeline.py
workflows/: pharma_pipeline_job.yml  workflow_bronze.yml  workflow_gold.yml  workflow_silver.yml
